# DeckTest

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  FORGE_REBUILD_MASTER_PLAN.md  INSTALL.md  LICENSE  PLAN_STATE.json  README.md  STATUS.md  deny.toml  rust-toolchain.toml
.github/workflows/: README.md  ci.yml  recurring.yml
.github/workflows-disabled/: ci.yml  recurring.yml
assets/: coverage_priority.txt  coverage_priority_README.md  layer_scenarios.carddb.index.json  t3_6_commander_semantic_candidates.json
assets/ai/: action_priors.ron  ai_tiers.ron  ai_weights.ron  benchmark_splits.json  decision_surface.json  pilot_intents.json
assets/t3_9/: integration_decks.json
cards/cp_dsl/: manifest.json  selection.json  source_cards.json
cards/scryfall/: README.md
crates/forge-ai/: Cargo.toml
crates/forge-app-android/: Cargo.toml
crates/forge-app-desktop/: Cargo.toml
crates/forge-app-ios/: Cargo.toml
crates/forge-app-wasm/: Cargo.toml
crates/forge-arena/: Cargo.toml
crates/forge-arena/src/: ladder.rs  lib.rs  main.rs
crates/forge-cardc/: Cargo.toml
crates/forge-cardc/src/: card_dsl.pest  database.rs  emit.rs  error.rs  lib.rs  main.rs  parse.rs  validate.rs
crates/forge-cardc/tests/: malformed_corpus.rs
crates/forge-carddef/: Cargo.toml
crates/forge-cards/: Cargo.toml
crates/forge-cards/src/: lib.rs  main.rs  runtime.rs
crates/forge-cli/: Cargo.toml
crates/forge-core/: Cargo.toml
crates/forge-game-runner/: Cargo.toml
crates/forge-game-runner/src/: lib.rs  main.rs
crates/forge-net/: Cargo.toml
crates/forge-porttools/: Cargo.toml
crates/forge-porttools/src/: legacy.rs  lib.rs  main.rs  mapper.rs  planner.rs  translator.rs
crates/forge-testkit/: Cargo.toml
crates/forge-testkit/src/: lib.rs  main.rs  runtime_smoke.rs
crates/forge-testkit/tests/fixtures/runtime_smoke/: bala_ged_recovery_bala_ged_sanctuary.frs  purphoros_god_of_the_forge.frs  reconnaissance_mission.frs  smothering_tithe.frs  supported_basic_land.frs  supported_life_spell.frs  supported_permanent_spell.frs  unsupported_draw_spell.frs  unsupported_mill_spell.frs
crates/forge-ui/: Cargo.toml
docs/: legacy_inventory.md  t1_10_legacy_test_oracle_mapping.md  toolchain.lock.md
docs/adr/: 0000-template.md  0001-gpl-ip-posture.md  0002-legacy-forge-pin.md  0003-comprehensive-rules-vendor.md  0007-gate-reviewer.md  0008-owner-channel.md  0009-fuzz-harness-dependencies.md  0010-criterion-benchmark-dependency.md  0011-card-dsl-parser-and-database.md  0012-rayon-porttools-local-parallelism.md  0013-data-driven-card-runtime-interpreter.md  0014-t4-neural-path-go-no-go.md  0015-production-game-runner-extraction.md  0016-total-decision-budget-and-edge-statistics.md  0017-hierarchical-combat-decisions.md  0018-safe-server-resource-telemetry.md  0019-hierarchical-resolution-object-choices.md  0020-canonical-apnap-trigger-ordering.md  0021-hierarchical-combat-damage-decisions.md  0022-explicit-canonical-concession.md  0023-hierarchical-variable-mana-casting.md  0024-canonical-trigger-target-announcement.md  0025-no-legal-target-trigger-disposition.md  0026-canonical-trigger-resolution-choices.md  0027-canonical-additional-spell-costs.md  0028-canonical-alternate-casting-costs.md  0029-canonical-activated-ability-extra-costs.md  0030-bounded-meaningful-search-transitions.md  0031-atomic-same-batch-trigger-targets.md  0032-resolution-target-legality-mask.md  (+5 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_carddsl/: type-line-roundtrip-44bd6e9037fc4599
fuzz/fuzz_targets/: fuzz_apply.rs  fuzz_carddb.rs  fuzz_carddsl.rs  fuzz_characteristics.rs  fuzz_scenarioparse.rs
metrics/: api_coverage.json  api_quarantine.json  blocker_plan.json  card_catalog.json  card_maturity.json  card_runtime_smoke.json  card_semantics_100.json  clone_surface.json  coverage.json  cp_dsl_corpus.json  cp_dsl_mutation.json  cp_dsl_verification.json  cp_layers_legacy_engine_snapshot.json  cp_layers_legacy_script_bridge.json  cp_layers_true_importer_diff.json  cp_layers_true_importer_diff_predicted.jsonl  legacy_parse.json  legacy_parse_failures.json  local_fuzz.json  local_platforms.json  oracle_semantics.json  perf_baseline.ci-ubuntu.json  perf_baseline.json  pod_integration.json  primitive_tickets.json  priority_coverage.json  project_status.json  scryfall_cache_summary.json  t3_mutation.json  t3_parallel_validation.json  translation.json  translation_quarantine.json
scripts/: bootstrap_toolchain.sh  card_regression.sh  check_coverage.sh  check_toolchain.sh  fuzz_local_parallel.sh  fuzz_nightly.sh  local_verify.sh  local_workers.sh  perf_smoke.sh  run_nightmare_suite.sh  run_oracle.sh  run_oracle_subset.sh  selftest.sh  t3_parallel_sweep.sh  test_archive_bootstrap.sh  verify_lfs_hydration.sh  vl.sh
tools/: audit_t4_decision_keys.py  build_t4_card_admission.py  check_rayon_boundary.py  coverage_summary.py  cp_dsl_evidence_packet.py  cp_dsl_metrics.py  cp_layers_legacy_engine_snapshot.py  cp_layers_legacy_script_bridge.py  cp_layers_legacy_subset.py  cp_layers_true_importer_diff.py  criterion_to_perf.py  freeze_t3_6_commander_semantics.py  generate_cp_dsl.py  generate_cp_dsl_negative.py  generate_cp_layers_reviewer_oracles.py  generate_t1_oracle_pack.py  generate_t2_gate_oracle_pack.py  local_platform_metrics.py  metrics_write.py  mine_legacy.py  oracle_semantic_metrics.py  perf_diff.py  quarantine_to_tickets.py  refresh_t4_diagnostics.py  run_cp_dsl_mutation.py  run_legacy_layer_snapshot.sh  run_local_fuzz.py  run_t3_6_commander_semantics.py  run_t3_9_pod_gate.py  run_t3_card_stage_gate.py  run_t3_mutation_gate.py  run_t4_mutation_gate.py  scryfall_cache_summary.py  summarize_t4_long_games.py  verify_t4_regression_pod.py  write_card_maturity.py  write_pod_integration.py  write_project_status.py  write_t3_fuzz_report.py  write_t3_parallel_metrics.py
(+1907 files in other folders)
