[package]
name = "forge-arena"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forge-cardc = { path = "../forge-cardc" }
forge-carddef = { path = "../forge-carddef" }
forge-cards = { path = "../forge-cards" }
forge-core = { path = "../forge-core" }
forge-ai = { path = "../forge-ai" }
forge-testkit = { path = "../forge-testkit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
