[package]
name = "forge-cards"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
forge-carddef = { path = "../forge-carddef" }
forge-core = { path = "../forge-core" }
serde_json = "1.0"

[dev-dependencies]
forge-cardc = { path = "../forge-cardc" }

[lints]
workspace = true
