[package]
name = "forge-game-runner"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forge-ai = { path = "../forge-ai" }
forge-cardc = { path = "../forge-cardc" }
forge-carddef = { path = "../forge-carddef" }
forge-cards = { path = "../forge-cards" }
forge-core = { path = "../forge-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "forge-t3-9-four-player-pod"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "forge-t4-runtime-isomorphism"
path = "src/bin/t4_runtime_isomorphism.rs"
test = false
bench = false

[lints]
workspace = true
