[package]
name = "forge-porttools"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forge-cardc = { path = "../forge-cardc" }
forge-carddef = { path = "../forge-carddef" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
