[package]
name = "forge-testkit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forge-cardc = { path = "../forge-cardc" }
forge-carddef = { path = "../forge-carddef" }
forge-core = { path = "../forge-core" }

[lints]
workspace = true
