[package]
name = "forge-testkit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
forge-cardc = { path = "../forge-cardc" }
forge-carddef = { path = "../forge-carddef" }
forge-cards = { path = "../forge-cards" }
forge-core = { path = "../forge-core" }
serde_json = "1.0"

[[bin]]
name = "forge-t3-6-runtime-probe"
path = "../../tests/t3_6/runtime_probe.rs"
test = false
bench = false

[lints]
workspace = true
